--- a/ascb/slides.Rmd
+++ b/ascb/slides.Rmd
@@ -282,9 +282,12 @@ ggplot(births) +
 ```
 
 ---
+
+class: middle 
+
 ## Three Steps of Making a basic ggplot
 
-- Make space for a plot using the dataset. 
+- Decide on what dataset to plot. 
 
 --
 
@@ -292,11 +295,11 @@ ggplot(births) +
 
 --
 
-- Decide what kind of a plot.
+- Decide on the type of the plot.
 
 ---
 
-## Step 1 - Make space for the plot
+## Step 1 - Decide on what dataset to plot
 
 .left-panel[
 ```{r eval = FALSE}
