flip axes for weight and gained

--- a/ascb/slides.Rmd
+++ b/ascb/slides.Rmd
@@ -531,8 +531,8 @@ ggplot(births) +
 
 ```{r eval = FALSE, fig.height=6, fig.width=9, warning = FALSE, message=FALSE}
 ggplot(births) +
-  aes(x = gained, 
-      y = weight) +
+  aes(x = weight, 
+      y = gained) +
   geom_point() 
 
 ```
@@ -542,8 +542,8 @@ ggplot(births) +
 .right-panel[
 ```{r echo = FALSE, fig.height=6, fig.width=9, warning = FALSE, message=FALSE}
 ggplot(births) +
-  aes(x = gained, 
-      y = weight) +
+  aes(x = weight, 
+      y = gained) +
   geom_point() 
 
 ```
@@ -584,8 +584,8 @@ layers...
 
 ```{r eval = FALSE, fig.height=6, fig.width=9, warning = FALSE, message=FALSE}
 ggplot(births) +
-  aes(x = gained, 
-      y = weight) +
+  aes(x = weight, 
+      y = gained) +
   geom_point()  +
   geom_smooth()
 
@@ -596,8 +596,8 @@ ggplot(births) +
 .right-panel[
 ```{r echo = FALSE, fig.height=6, fig.width=9, warning = FALSE, message=FALSE}
 ggplot(births) +
-  aes(x = gained, 
-      y = weight) +
+  aes(x = weight, 
+      y = gained) +
   geom_point()  +
   geom_smooth()
 
@@ -628,9 +628,9 @@ We can set the smoothing method to be _lm_ (linear model).
 
 ```{r eval = FALSE, fig.height=6, fig.width=9, warning = FALSE, message=FALSE}
 ggplot(births) +
-  aes(x = gained, 
-      y = weight) +
-  geom_point()  +
+  aes(x = weight, 
+      y = gained) +
+  geom_point()   +
   geom_smooth(method = "lm")
 
 ```
@@ -640,9 +640,9 @@ ggplot(births) +
 .right-panel[
 ```{r echo = FALSE, fig.height=6, fig.width=9, warning = FALSE, message=FALSE}
 ggplot(births) +
-  aes(x = gained, 
-      y = weight) +
-  geom_point()  +
+  aes(x = weight, 
+      y = gained) +
+  geom_point()   +
   geom_smooth(method = "lm")
 
 ```
@@ -672,9 +672,9 @@ We can set _se_ (standard error) to FALSE
 
 ```{r eval = FALSE, fig.height=6, fig.width=9, warning = FALSE, message=FALSE}
 ggplot(births) +
-  aes(x = gained, 
-      y = weight) +
-  geom_point() +
+  aes(x = weight, 
+      y = gained) +
+  geom_point()  +
   geom_smooth(method = "lm", 
               se = FALSE)
 
@@ -685,9 +685,9 @@ ggplot(births) +
 .right-panel[
 ```{r echo = FALSE, fig.height=6, fig.width=9, warning = FALSE, message=FALSE}
 ggplot(births) +
-  aes(x = gained, 
-      y = weight) +
-  geom_point() +
+  aes(x = weight, 
+      y = gained) +
+  geom_point()  +
   geom_smooth(method = "lm", 
               se = FALSE)
 
@@ -801,11 +801,11 @@ ggplot(births) +
 
 ```{r fig.height=6, fig.width=9, eval = FALSE}
 ggplot(births) +
-  aes(x = gained, 
-      y = weight) +
+  aes(x = weight, 
+      y = gained) +
   geom_point() +
-  labs(x = "Weight Gained by the Mother",
-       y = "Birth Weight of the Baby",
+  labs(x = "Birth Weight of the Baby",
+       y = "Weight Gained by the Mother",
        title = "Relationship between Mother's and Baby's Weight",
        caption = "Based on a random sample of 100 births in North Carolina") 
 
@@ -816,11 +816,11 @@ ggplot(births) +
 .right-panel[
 ```{r echo = FALSE, fig.height=6, fig.width=9, warning = FALSE}
 ggplot(births) +
-  aes(x = gained, 
-      y = weight) +
+  aes(x = weight, 
+      y = gained) +
   geom_point() +
-  labs(x = "Weight Gained by the Mother",
-       y = "Birth Weight of the Baby",
+  labs(x = "Birth Weight of the Baby",
+       y = "Weight Gained by the Mother",
        title = "Relationship between Mother's and Baby's Weight",
        caption = "Based on a random sample of 100 births in North Carolina") 
 ```
